Bug 515551 - Wallpaper/slideshow: "Open Containing Folder" does not work
Summary: Wallpaper/slideshow: "Open Containing Folder" does not work
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Image & Slideshow wallpaper plugins (other bugs)
Version First Reported In: 6.6.0
Platform: Other Linux
: HI normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2026-02-05 14:24 UTC by Tobias Fella
Modified: 2026-02-24 05:04 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tobias Fella 2026-02-05 14:24:18 UTC
SUMMARY

The "Open Containing Folder" button in the slideshow wallpaper kcm does not work

STEPS TO REPRODUCE
1. Configure slideshow wallpaper
2. Hover over an image, click the button

OBSERVED RESULT
- Nothing

EXPECTED RESULT
- Folder opens

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: git master
Comment 1 Nate Graham 2026-02-20 19:10:36 UTC
Can reproduce for the Slideshow wallpaper plugin. It works with the Image plugin.
Comment 2 Nate Graham 2026-02-20 20:36:14 UTC
This appears to have been caused by https://invent.kde.org/plasma/plasma-workspace/-/commit/7ef1a3ddb97a31de0c0d611c51e2baaca81dc5ef. We're hitting the early return for sourceModel being null.

These early returns in a function intended to trigger a UI action are not ideal.  If we hit them, the result is a button that does nothing when clicked, as seen here.

In addition to fixing the issue, we should have these early returns bubble up an error message that can be shown in the UI before returning. Or get rid of the early returns and make sure the function always works.
Comment 3 Vlad Zahorodnii 2026-02-21 10:13:43 UTC
I will look into it on Monday. Those early returns are rather sanity checks, i.e. they'd be triggered only if passed in indices are completely wrong.
Comment 4 Vlad Zahorodnii 2026-02-21 10:24:59 UTC
sourceModel is not null, it's rather of unexpected type that I didn't account for.
Comment 5 Bug Janitor Service 2026-02-21 10:39:39 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/6329
Comment 6 Vlad Zahorodnii 2026-02-22 12:56:21 UTC
Git commit 5da19ec0347e0f8ba60c18954d5a299c0d37f81b by Vlad Zahorodnii.
Committed on 22/02/2026 at 12:21.
Pushed by vladz into branch 'master'.

wallpapers/image: Fix "open containing folder" in slideshow

Amends 7ef1a3ddb97a31de0c0d611c51e2baaca81dc5ef.

The model hierarchy looks as follows: SlideFilterMode -> SlideModel ->
ImageProxyModel -> {PackageListModel / ImageListModel}.

The referenced commit had a different model hierarchy in mind, which was
wrong.

M  +2    -11   wallpapers/image/plugin/slidefiltermodel.cpp
M  +16   -0    wallpapers/image/plugin/slidemodel.cpp
M  +1    -0    wallpapers/image/plugin/slidemodel.h

https://invent.kde.org/plasma/plasma-workspace/-/commit/5da19ec0347e0f8ba60c18954d5a299c0d37f81b
Comment 7 Vlad Zahorodnii 2026-02-22 14:03:47 UTC
Git commit a2a0522e57cf0200321ecf14e7669873d82f700f by Vlad Zahorodnii.
Committed on 22/02/2026 at 13:06.
Pushed by vladz into branch 'Plasma/6.6'.

wallpapers/image: Fix "open containing folder" in slideshow

Amends 7ef1a3ddb97a31de0c0d611c51e2baaca81dc5ef.

The model hierarchy looks as follows: SlideFilterMode -> SlideModel ->
ImageProxyModel -> {PackageListModel / ImageListModel}.

The referenced commit had a different model hierarchy in mind, which was
wrong.


(cherry picked from commit 5da19ec0347e0f8ba60c18954d5a299c0d37f81b)

Co-authored-by: Vlad Zahorodnii <vlad.zahorodnii@kde.org>

M  +2    -11   wallpapers/image/plugin/slidefiltermodel.cpp
M  +16   -0    wallpapers/image/plugin/slidemodel.cpp
M  +1    -0    wallpapers/image/plugin/slidemodel.h

https://invent.kde.org/plasma/plasma-workspace/-/commit/a2a0522e57cf0200321ecf14e7669873d82f700f