wallpapers/image: Fix "open containing folder" in slideshow

Amends 7ef1a3ddb97a31de0c0d611c51e2baaca81dc5ef.

The model hierarchy looks as follows: SlideFilterMode -> SlideModel ->
ImageProxyModel -> {PackageListModel / ImageListModel}.

The referenced commit had a different model hierarchy in mind, which was
wrong.

BUG: 515551